fix: colors contrast

--- a/portfolio-astro-app/src/styles/global.css
+++ b/portfolio-astro-app/src/styles/global.css
@@ -7,6 +7,7 @@
     --color-on-surface: var(--color-on-surface);
 
     --color-primary: var(--color-primary);
+    --color-on-primary: var(--color-on-primary);
     --color-primary-container: var(--color-primary-container);
     --color-on-primary-container: var(--color-on-primary-container);
 
